[project]
name = "cartesapplib"
version = "0.0.1"
authors = [
  { name="Lyno Ferraz", email="lyno@prototyp3.dev" },
]
description = "Standard libs for Cartesapp"
requires-python = "~=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    # It actually need cartesapp, but it should already be installed on your system
    # "cartesapp @ git+https://github.com/prototyp3-dev/cartesapp@main",
]

[project.urls]
"Homepage" = "https://github.com/prototyp3-dev/cartesapplib"
